[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Inimigos/Tatu.gd" type="Script" id=1]
[ext_resource path="res://Art/Enemies/tatu.png" type="Texture" id=2]
[ext_resource path="res://Singletons/PlayerState.tres" type="Resource" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.7352

[sub_resource type="CircleShape2D" id=2]
radius = 133.25

[sub_resource type="CircleShape2D" id=3]
radius = 62.1357

[node name="Tatu" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
script = ExtResource( 1 )
range_ataque = 120
range_visao = 200
bouncing_duration = 1.0
player_state = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Visao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visao"]
shape = SubResource( 2 )

[node name="Ataque" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ataque"]
shape = SubResource( 3 )

[node name="BouncingTimer" type="Timer" parent="."]
one_shot = true

[node name="RecuperandoTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Visao" to="." method="_on_Visao_body_entered"]
[connection signal="body_exited" from="Visao" to="." method="_on_Visao_body_exited"]
[connection signal="body_entered" from="Ataque" to="." method="_on_Ataque_body_entered"]
[connection signal="body_exited" from="Ataque" to="." method="_on_Ataque_body_exited"]
[connection signal="timeout" from="BouncingTimer" to="." method="_on_BouncingTimer_timeout"]
